fix: eliminate 1em min-width on table cells in CSS
The `table-layout` was changed from `fixed` to `auto`, which caused this
`min-width` to be respected (no longer overridden by `width: 0`
columns). As a result, columns that should be invisible were now being
rendered with a width of 1em. Removing this presumably-unnecessary
`min-width` on cell width.

--- a/packages/super-editor/src/assets/styles/elements/prosemirror.css
+++ b/packages/super-editor/src/assets/styles/elements/prosemirror.css
@@ -187,7 +187,7 @@ https://github.com/ProseMirror/prosemirror-tables/blob/master/demo/index.html
 
 .ProseMirror td,
 .ProseMirror th {
-  min-width: 1em;
+  min-width: 0;
   position: relative;
   vertical-align: top;
   box-sizing: border-box;
